SED-847 Resolve keywords by name by for all keywords references